--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 	<script src="vendor/three.min.js"></script>
 	<script src="vendor/OBJLoader.js"></script>
-	<script src="vendor/OrbitControls.js"></script>
+	<script src="js/FPV.js"></script>
+	<script src="js/terrainLoader.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
